*Version 3.2.3*
* Updated help doc for page editor
* Updated help doc for system status page
* Events page now updates in realtime via websockets
* Fix bugs and enhance events page, progress bar, more sort options, refresh on restart etc
* Fixes to RestResource
* Fix filtering device name list, data source list and point hierarchy list
* Removed maEventsEventManager service, use maEvents.notificationManager instead
* Bug fixes and tweaks

*Version 3.2.2*
* Added point history counts to system info page
* Fix trying to load maUiDateBar service when its not available

*Version 3.2.1*
* Added a system status page
* Add page for viewing/deleting JSON store items
* More compact layout for buttons and controls on "Edit pages"
* Add maTouchstart, maTouchend, maTouchmove and maTouchcancel directives
* Fix bug loading UI in Edge
* Add default version parameter for loading resources
* Fix date pickers not working in adminTemplate
* Add popup icons to pointValue directives
* Display data point events on watchlist popup
* Add auto scaling mode to gaugeChart
* Add slider component
* Update javascript libraries
* Bug fixes and tweaks

*Version 3.2.0*
* Upgraded to work with core version 3.2.x
* Latest ngMango API is located in web/ngMango instead of ngMango-3.2
* Bug fixes

*Version 3.1.1*
* Option for setting label on ma-point-value
* Updated examples
* Bug fixes

*Version 3.1.0*
* Upgraded to work with core version 3.1.x
* Fix bootstrapping ngMango via bootstrap.js
* Fix bug displaying chart and table on watch list dialog
* Add more system settings
* Layout changes to user and system settings pages
* Add ma-svg directive
* Update documentation and help pages
* Help pages open in sidebar
* Ctrl-S hotkey binding for custom pages
* Fix loading issue caused by ad-blockers
* Improve ma-state-chart directive
* Upgrade AngularJS to 1.6.x
* Rename AngularJS modules and services
* Better error handling for loading module AngularJS files