@@ -25,8 +25,8 @@
 	</p>
 
 	<p>
-		Click any row to select that <code>Audit Event</code> and have its context be displayed as JSON in an output pane below
-		the table.
+		Click any row to select that <code>Audit Event</code> and have its context be displayed as JSON in an output pane in a
+		popup dialog.
 	</p>
 
 	<br>
@@ -125,7 +125,7 @@
 		 alt="Help-ScreenShots-SystemStatus-LogFilesTable"/>
 
 	<p>
-		You can <code>View</code> a log file in the text pane below the table, or you can <code>Download</code> a log file to
+		You can <code>View</code> a log file in the text pane in a popup dialog, or you can <code>Download</code> a log file to
 		your desktop.
 	</p>
 
